Fix example align bug on mobile

--- a/src/app/features/landing/landing.component.scss
+++ b/src/app/features/landing/landing.component.scss
@@ -92,6 +92,7 @@ h3 {
     margin-bottom: 40px;
     width: 100%;
     max-width: 300px;
+    margin: auto;
   }
 }
 
